# loop-hermes

./: CHANGELOG.md  LICENSE  README.md  SECURITY.md  provider_fallback_manager.py  pyproject.toml  pytest.ini  requirements.txt
loop_hermes/: __init__.py  build.py  checksum.py  cli.py  config.py  gate_g1.py  gate_g2.py  gate_g3.py  gate_g4.py  gate_g5.py  gate_g6.py  gate_guard.py  guardrail_mapper.py  hermes_client.py  monitor.py  parallel_manager.py  phase_dispatch.py  platform_config.py  provider_fallback.py  routing.py  sanity_check.py  scheduler.py  schemas.py  state_machine.py
loop_hermes/prompts/: init.txt  part_1_1_requirements.txt  part_1_2_direction.txt  part_1_3_solution.txt  part_2_1_plan.txt  part_2_2_implement.txt  part_2_3_review.txt  part_2_4_e2e_strategy.txt  part_2_5_test_plan.txt  part_2_6_test_execute.txt  part_2_7_audit.txt  part_2_8_hard_gate.txt
scripts/: security_audit.py
tests/: __init__.py  conftest.py  test_build.py  test_checksum.py  test_cli.py  test_config.py  test_edge_cases.py  test_gate_g1.py  test_gate_g2.py  test_gate_g3.py  test_gate_g4.py  test_gate_g5.py  test_gate_g6.py  test_gate_guard.py  test_golden.py  test_guardrail_mapper.py  test_hermes_client.py  test_monitor.py  test_parallel_manager.py  test_performance.py  test_performance_config.py  test_phase_dispatch.py  test_platform_config.py  test_provider_fallback.py  test_routing.py  test_sanity_check.py  test_scheduler.py  test_schemas.py  test_state_machine.py
tests/fixtures/: minimal_state.json
